[gd_scene load_steps=12 format=3 uid="uid://c7015tuyqysh8"]

[ext_resource type="Script" uid="uid://ds4vds4xpcifd" path="res://scenes/main_display_scenes/player_hud.gd" id="1_dnds5"]
[ext_resource type="Texture2D" uid="uid://dlpr5xm7jo5pk" path="res://graphics/huds/player_hud.png" id="1_w4b2m"]
[ext_resource type="PackedScene" uid="uid://vwcpmy2hi2qc" path="res://scenes/character.tscn" id="3_ldeky"]
[ext_resource type="Theme" uid="uid://duhun5q5swqyn" path="res://graphics/themes/big.tres" id="3_qlvr2"]
[ext_resource type="Theme" uid="uid://bmb6alj3b355v" path="res://graphics/themes/small.tres" id="4_0uiy3"]
[ext_resource type="Texture2D" uid="uid://b6ft2tdu2jpwg" path="res://graphics/huds/player_hud_shine.png" id="4_2wdk6"]
[ext_resource type="Shader" uid="uid://do1l2ql4uka3s" path="res://graphics/shaders/pixelation.gdshader" id="5_2wdk6"]
[ext_resource type="Material" uid="uid://dwflkaqsor3yi" path="res://graphics/shaders/Chromatic.tres" id="7_2ngfb"]
[ext_resource type="Texture2D" uid="uid://b65rd0imtqgev" path="res://graphics/huds/candle_shine_1.png" id="8_0uiy3"]
[ext_resource type="Texture2D" uid="uid://baf1orxpwhvtg" path="res://graphics/huds/candle_shine_2.png" id="9_5hmf3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qlvr2"]
shader = ExtResource("5_2wdk6")
shader_parameter/pixelation_size = 2.0

[node name="PlayerHud" type="CanvasLayer"]
script = ExtResource("1_dnds5")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(640, 670)
scale = Vector2(2, 2)
texture = ExtResource("1_w4b2m")
offset = Vector2(0, -3)

[node name="Health_Cur" type="Label" parent="Background"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -311.5
offset_top = -75.5
offset_right = -265.5
offset_bottom = -45.5
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_qlvr2")
text = "20"
horizontal_alignment = 1

[node name="Health_Max" type="Label" parent="Background"]
offset_left = 24.5
offset_top = 2.0
offset_right = 39.5
offset_bottom = 15.0
theme = ExtResource("4_0uiy3")
text = "/20"
horizontal_alignment = 1

[node name="Insanity_Cur" type="Label" parent="Background"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -375.0
offset_top = -75.0
offset_right = -329.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_qlvr2")
text = "20"
horizontal_alignment = 1

[node name="Insanity_Max" type="Label" parent="Background"]
offset_left = -39.5
offset_top = 2.0
offset_right = -24.5
offset_bottom = 15.0
theme = ExtResource("4_0uiy3")
text = "/20"
horizontal_alignment = 1

[node name="Stats" type="Control" parent="Background"]
layout_mode = 3
anchors_preset = 0
offset_left = -263.0
offset_top = -17.5
offset_right = -100.0
offset_bottom = 36.5
size_flags_horizontal = 0

[node name="Perception" type="VBoxContainer" parent="Background/Stats"]
layout_mode = 2
offset_left = 6.0
offset_right = 31.0
offset_bottom = 54.0
theme_override_constants/separation = -5

[node name="Name" type="Label" parent="Background/Stats/Perception"]
layout_mode = 2
theme = ExtResource("4_0uiy3")
text = "PRC"
horizontal_alignment = 1

[node name="Value" type="Label" parent="Background/Stats/Perception"]
layout_mode = 2
theme = ExtResource("3_qlvr2")
text = "10"
horizontal_alignment = 1

[node name="Occult" type="VBoxContainer" parent="Background/Stats"]
layout_mode = 2
offset_left = 48.0
offset_right = 73.0
offset_bottom = 54.0
theme_override_constants/separation = -5

[node name="Name" type="Label" parent="Background/Stats/Occult"]
layout_mode = 2
theme = ExtResource("4_0uiy3")
text = "OCC"
horizontal_alignment = 1

[node name="Value" type="Label" parent="Background/Stats/Occult"]
layout_mode = 2
theme = ExtResource("3_qlvr2")
text = "10"
horizontal_alignment = 1

[node name="Agility" type="VBoxContainer" parent="Background/Stats"]
layout_mode = 2
offset_left = 90.0
offset_right = 115.0
offset_bottom = 54.0
theme_override_constants/separation = -5

[node name="Name" type="Label" parent="Background/Stats/Agility"]
layout_mode = 2
theme = ExtResource("4_0uiy3")
text = "AGL"
horizontal_alignment = 1

[node name="Value" type="Label" parent="Background/Stats/Agility"]
layout_mode = 2
theme = ExtResource("3_qlvr2")
text = "10"
horizontal_alignment = 1

[node name="Power" type="VBoxContainer" parent="Background/Stats"]
layout_mode = 2
offset_left = 132.0
offset_right = 157.0
offset_bottom = 54.0
theme_override_constants/separation = -5

[node name="Name" type="Label" parent="Background/Stats/Power"]
layout_mode = 2
theme = ExtResource("4_0uiy3")
text = "POW"
horizontal_alignment = 1

[node name="Value" type="Label" parent="Background/Stats/Power"]
layout_mode = 2
theme = ExtResource("3_qlvr2")
text = "10"
horizontal_alignment = 1

[node name="PixelShaderApplicator" type="ColorRect" parent="Background"]
visible = false
material = SubResource("ShaderMaterial_qlvr2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -31.0
offset_right = -320.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="ChromaticSprites" type="Node2D" parent="Background"]
material = ExtResource("7_2ngfb")

[node name="Background" type="Sprite2D" parent="Background/ChromaticSprites"]
use_parent_material = true
position = Vector2(0, -3)
texture = ExtResource("4_2wdk6")

[node name="Candle1" type="Sprite2D" parent="Background/ChromaticSprites"]
use_parent_material = true
position = Vector2(69, -4)
texture = ExtResource("8_0uiy3")

[node name="Candle2" type="Sprite2D" parent="Background/ChromaticSprites"]
use_parent_material = true
position = Vector2(79.5, 9.5)
texture = ExtResource("9_5hmf3")

[node name="Candle3" type="Sprite2D" parent="Background/ChromaticSprites"]
use_parent_material = true
position = Vector2(-72.5, 6.5)
texture = ExtResource("9_5hmf3")

[node name="Candle4" type="Sprite2D" parent="Background/ChromaticSprites"]
use_parent_material = true
position = Vector2(-302.5, -25.5)
texture = ExtResource("8_0uiy3")

[node name="Candle5" type="Sprite2D" parent="Background/ChromaticSprites"]
use_parent_material = true
position = Vector2(-292.5, -5)
texture = ExtResource("9_5hmf3")

[node name="Candle8" type="Sprite2D" parent="Background/ChromaticSprites"]
use_parent_material = true
position = Vector2(299, -7)
texture = ExtResource("8_0uiy3")

[node name="Candle7" type="Sprite2D" parent="Background/ChromaticSprites"]
use_parent_material = true
position = Vector2(303, -29.5)
texture = ExtResource("9_5hmf3")

[node name="Character" parent="." instance=ExtResource("3_ldeky")]

[connection signal="health_changed" from="Character" to="." method="_on_character_health_changed"]
[connection signal="insanity_changed" from="Character" to="." method="_on_character_insanity_changed"]
[connection signal="stats_changed" from="Character" to="." method="_on_character_stats_changed"]
